WIP using Kase in unit tests