@@ -126,7 +126,6 @@ abstract class BasePlugin : Plugin<Project> {
    * so that there is no shared mutable state.
    */
   private fun configureBuildDirs(target: Project) {
-
     when {
       !target.isInAnvilBuild() -> return
 
@@ -201,6 +200,23 @@ abstract class BasePlugin : Plugin<Project> {
 
       task.maxParallelForks = Runtime.getRuntime().availableProcessors()
 
+      task.useJUnitPlatform {
+        it.includeEngines("junit-jupiter", "junit-vintage")
+      }
+      task.systemProperties.putAll(
+        mapOf(
+          // remove parentheses from test display names
+          "junit.jupiter.displayname.generator.default" to
+            "org.junit.jupiter.api.DisplayNameGenerator\$Simple",
+
+          // Allow unit tests to run in parallel
+          // https://junit.org/junit5/docs/snapshot/user-guide/#writing-tests-parallel-execution-config-properties
+          "junit.jupiter.execution.parallel.enabled" to true,
+          "junit.jupiter.execution.parallel.mode.default" to "concurrent",
+          "junit.jupiter.execution.parallel.mode.classes.default" to "concurrent",
+        ),
+      )
+
       task.jvmArgs(
         // Fixes illegal reflective operation warnings during tests. It's a Kotlin issue.
         // https://github.com/pinterest/ktlint/issues/1618
@@ -218,7 +234,6 @@ abstract class BasePlugin : Plugin<Project> {
         "--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
         "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
         "--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-        "--illegal-access=permit",
       )
 
       task.testLogging { logging ->
